# json-timeseries-py

./: .gitignore  .readthedocs.yml  README.md  build.sh  setup.cfg  setup.py
docs/: conf.py  index.rst  requirements.txt
docs/source/api/: jts.rst  jts_py.rst
json_timeseries/: __init__.py  jts.py
jts_py/: __init__.py  jts_py.py
src/json_timeseries/: __init__.py
src/tests/: test_json_timeseries.py
tests/: test_json_timeseries.py  test_jts_py.py
